# 2fapi-server

./: .env  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json  vitest.config.ts
crypto-core/: Cargo.toml  Makefile  rust-toolchain.toml  sbom-crypto-core.cdx.json
crypto-core/benches/: dudect_constant_time.rs
crypto-core/napi/: Cargo.toml  NOTICE  build.rs  index.d.ts  package-lock.json  package.json  twofapi-crypto-napi.linux-x64-gnu.node
crypto-core/napi/src/: lib.rs
crypto-core/src/: bip39.rs  derivation.rs  errors.rs  generators.rs  lib.rs  multi_commitment.rs  oprf.rs  pedersen.rs  sharing.rs  sigma.rs  transcript.rs
crypto-core/wasm/: Cargo.toml
crypto-core/wasm/src/: lib.rs
docs/: PROTOCOL.md
docs/bdd/: biometric-store-scenarios.md  client-secret-storage-scenarios.md  device-linking-scenarios.md  enrollment-login-flow-scenarios.md  iteration-01.md  iteration-02.md  iteration-03.md  oprf-hardware-vault-scenarios.md  password-locked-vault-scenarios.md  prioritized-oprf-vault-scenarios.md  rustiam-integration-scenarios.md  scenarios.md  shared-device-scenarios.md  wasm-crypto-module-scenarios.md
docs/guides/: migration-from-api-keys.md
docs/presentation/: linkedin-post.md  market-pitch.md  technical-overview.md
docs/sprints/: sprint-23-oprf-p1.md
extensions/: README.md  docker-compose.yml
extensions/pg-extension/: Cargo.toml  Dockerfile  Dockerfile.pg16  NOTICE  README.md  pg_2fapi.control
extensions/pg-extension/sql/: pg_2fapi--1.0.sql
extensions/pg-extension/src/: lib.rs
extensions/pg-extension/src/domain/: brute_force.rs  challenge.rs  enrollment.rs  mod.rs  session.rs  transcript.rs  verification.rs
extensions/pg-extension/src/infrastructure/: mod.rs  pg_audit.rs  pg_challenge.rs  pg_cleanup.rs  pg_enroll.rs  pg_session.rs  pg_verify.rs  session_state.rs
extensions/redis-module/: Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  redis-hardened.conf
extensions/redis-module/src/: lib.rs
extensions/redis-module/src/domain/: acl.rs  challenge_store.rs  client_store.rs  device_linking.rs  mod.rs  verification.rs
extensions/redis-module/src/infrastructure/: commands.rs  device_commands.rs  mod.rs  session.rs
src/: create-access-control-service.ts  create-challenge-service.ts  create-enrollment-service.ts  create-lifecycle-service.ts  create-monitoring-service.ts  create-recovery-service.ts  create-verification-service.ts  index.ts
src/api-gateway/: problem-details.ts  response-padding.ts  server.ts  validation.ts
src/config/: bootstrap.ts  development-services.ts  environment.ts  production-services.ts
src/shared/: concurrency-limiter.ts  constant-time.ts  errors.ts  global-rate-limiter.ts  redis-global-rate-limiter.ts  redis-ip-rate-limiter.ts  rng-health-checker.ts
src/types/: crypto-native.d.ts  external-modules.d.ts
tests/acceptance/: api-access-control.acceptance.test.ts  challenge-issuance.acceptance.test.ts  client-enrollment.acceptance.test.ts  client-lifecycle.acceptance.test.ts  compromise-detection.acceptance.test.ts  recovery.acceptance.test.ts  security-monitoring.acceptance.test.ts
tests/api-gateway/: test-helpers.ts  validation.test.ts
tests/final-fixes/: item-01-stub-argon2-hasher-guard.test.ts  item-02-stub-verification-guard.test.ts
tests/helpers/: access-control-test-helpers.ts  challenge-test-helpers.ts  enrollment-test-helpers.ts  lifecycle-test-helpers.ts  verification-test-helpers.ts
tests/integration/: bootstrap.integration.test.ts  (+1 more)
(+499 files in other folders)
