[package]
name = "twofapi-crypto-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for 2FApi cryptographic core — Pedersen, Sigma, OPRF over Ristretto255"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
twofapi-crypto-core = { path = ".." }
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
curve25519-dalek = "4"
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
